maintainIT2/src/objects/SIR_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Current_AvailQty__c</fullName>
        <formula>Part_ID__r.Available_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current AvailQty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_OnHandQty__c</fullName>
        <description>Total On Hand Qty for the Part for ALL Bin Locations</description>
        <formula>Part_ID__r.On_Hand_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total On Hand Qty for the Part for ALL Bin Locations</inlineHelpText>
        <label>On Hand Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_From_Primary_Bin__c</fullName>
        <formula>ISBLANK(Secondary_Bin_Loc__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue From Primary Bin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issued_Qty__c</fullName>
        <formula>Part_Trans_ID__r.Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issued Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Qty__c</fullName>
        <formula>(Requested_Qty__c - Issued_Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup Relationship with Part Object.</description>
        <inlineHelpText>Lookup Relationship with Part Object.</inlineHelpText>
        <label>Part ID</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>SIR Line Items</relationshipLabel>
        <relationshipName>SIR_PartDetails</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Trans_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Trans ID</label>
        <referenceTo>Part_Transaction__c</referenceTo>
        <relationshipName>SIR_PartTransDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pick_Qty__c</fullName>
        <label>Pick Qty</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Bin_Loc_OH_Qty__c</fullName>
        <formula>Part_ID__r.Primary_Bin_Loc_OH_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Bin Loc OH Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Bin_Loc__c</fullName>
        <formula>Part_ID__r.Primary_Bin_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Bin Loc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Qty__c</fullName>
        <label>Requested Qty</label>
        <precision>7</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIR_ID__c</fullName>
        <label>SIR ID</label>
        <referenceTo>Stock_Issue_Request__c</referenceTo>
        <relationshipName>SIR_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Secondary_Bin_Loc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Bin Loc</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Part_Bin_Location__c.Part__c</field>
                <operation>equals</operation>
                <valueField>$Source.Part_ID__c</valueField>
            </filterItems>
            <filterItems>
                <field>Part_Bin_Location__c.Primary_Bin__c</field>
                <operation>equals</operation>
                <value>No</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Part_Bin_Location__c</referenceTo>
        <relationshipLabel>SIR Line Items</relationshipLabel>
        <relationshipName>SIR_Details_SecBinLoc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Bin_OH_Qty__c</fullName>
        <description>Oh Hand Qty in the Selected Secondary Bin Location</description>
        <formula>Secondary_Bin_Loc__r.On_Hand_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Oh Hand Qty in the Selected Secondary Bin Location</inlineHelpText>
        <label>Secondary Bin OH Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_UOM__c</fullName>
        <formula>TEXT(Part_ID__r.Stock_UOM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storeroom__c</fullName>
        <formula>Part_ID__r.Storeroom__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Storeroom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Part_Id__c</fullName>
        <formula>Part_Trans_ID__r.WO_Part__r.Name</formula>
        <label>WO Part Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_ID__c</fullName>
        <description>Formula Reference to Work Order ID</description>
        <formula>SIR_ID__r.WO_ID__c</formula>
        <inlineHelpText>Formula Reference to Work Order ID</inlineHelpText>
        <label>Work Order ID</label>
        <type>Text</type>
    </fields>
    <label>SIR Line Item</label>
    <nameField>
        <displayFormat>SD-{0000000}</displayFormat>
        <label>SIR Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIR Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Pick_Qty_GE_Zero</fullName>
        <active>true</active>
        <description>Ensures the Pick Quantity is Greater Than or Equal to Zero</description>
        <errorConditionFormula>Pick_Qty__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Pick_Qty__c</errorDisplayField>
        <errorMessage>The Pick Qty must be Greater Than or Equal to Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pick_Qty_Not_Editable_when_SIR_Completed</fullName>
        <active>false</active>
        <description>Ensures that the Pick Qty cannot be edited if the SIR Status Equals Completed</description>
        <errorConditionFormula>ISCHANGED( Pick_Qty__c ) &amp;&amp;  ISPICKVAL( SIR_ID__r.Status__c , &quot;Completed&quot;)</errorConditionFormula>
        <errorDisplayField>Pick_Qty__c</errorDisplayField>
        <errorMessage>The Pick Qty cannot be edited if the Stock Issue Request Status Equals Completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requested_Qty_GE_Zero</fullName>
        <active>true</active>
        <description>Ensures the Requested Quantity is Greater Than or Equal to Zero</description>
        <errorConditionFormula>Requested_Qty__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Requested_Qty__c</errorDisplayField>
        <errorMessage>The Requested Quantity must be Greater Than or Equal to Zero</errorMessage>
    </validationRules>
</CustomObject>